# ROS2Copter

./: README.md
PiCopter/Config/: picopter_config.ini
PiCopter/Missions/: mission.ini  mission_template.ini
PiCopter/Simulator/: simulation.ini
ahrs_sim_pkg/: CMakeLists.txt  package.xml
ahrs_sim_pkg/include/ahrs_sim_pkg/: ahrs_sim.h
ahrs_sim_pkg/src/: ahrs_sim.cpp  ahrs_sim_node.cpp
autopilot_pkg/: CMakeLists.txt  package.xml
autopilot_pkg/include/autopilot_pkg/: autopilot.h  controllers.h  standardAltitude.h  standardPID.h  superTwistingSMC.h
autopilot_pkg/src/: autopilot.cpp  autopilot_node.cpp  controllers.cpp  standardAltitude.cpp  standardPID.cpp  superTwistingSMC.cpp
navigator_pkg/: CMakeLists.txt  package.xml
navigator_pkg/include/navigator_pkg/: navigator.h
navigator_pkg/src/: navigator.cpp  navigator_node.cpp
picopter_bringup/: CMakeLists.txt  package.xml
picopter_interfaces/: CMakeLists.txt  package.xml
picopter_interfaces/msg/: AutopilotMSG.msg  ElevationMSG.msg  GpsMSG.msg  ImuMSG.msg  NavigatorMSG.msg  SimulatorMSG.msg
picopter_sim/: CMakeLists.txt  package.xml
picopter_sim/launch/: picopter_sim.launch.py
simulator_pkg/: CMakeLists.txt  package.xml
simulator_pkg/include/simulator_pkg/: INIReader.h  simulator.h
simulator_pkg/src/: simulator.cpp  simulator_node.cpp
